# commandants

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: apply_transform_to_image_and_points.py  masking.py  point_constrained_warp.py  rigid_affine_syn.py  using_presets.py
src/commandants/: __init__.py  __main__.py  estimate.py  exit_codes.py  install.py  presets.py
src/commandants/core/: __init__.py  exceptions.py  executable.py  params.py  runner.py
src/commandants/io/: __init__.py  materialize.py  points.py
src/commandants/preprocessing/: __init__.py  image_math.py  n4.py  resample.py  threshold.py
src/commandants/registration/: __init__.py  ants_registration.py  apply.py  metrics.py  stage.py  transforms.py
tests/: test_apply_build.py  test_estimate.py  test_executable.py  test_exit_codes.py  test_install.py  test_integration.py  test_materialize.py  test_preprocessing_build.py  test_presets.py  test_registration_build.py  test_streaming.py
