[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commandants"
version = "0.1.0"
description = "A thin, transparent Python wrapper for the ANTs command-line tools (commandANTs)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yoni Browning" }]
keywords = ["ANTs", "registration", "neuroimaging", "medical-imaging", "wrapper", "CLI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
# Zero required runtime dependencies: the core only shells out to ANTs.
dependencies = []

[project.optional-dependencies]
# In-memory image support (pass/receive SimpleITK images; result.load()).
io = ["SimpleITK>=2.2", "numpy>=1.21"]
dev = ["pytest>=7.0", "SimpleITK>=2.2", "numpy>=1.21"]

[project.scripts]
commandants = "commandants.__main__:main"

[project.urls]
Homepage = "https://github.com/yonibrowning/commandants"
Issues = "https://github.com/yonibrowning/commandants/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
